# repo-metadata

./: .gitignore  LICENSE  README.md  pyproject.toml  repo_metadata.toml  repo_metadata.toml.example
src/repo_metadata_cli/: __init__.py  allowed_files.py  analyzer.py  cli.py  config.py  fetcher.py  metrics.py  settings.py  token_stats.py  tree_sitter_support.py  utils.py
src/repo_metadata_cli/scripts/: fetch_bundles.sh
